// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/group/GroupUsersRow should match snapshot 1`] = `
<div
  className="group "
>
  <div
    className="group-row roc"
    style={
      Object {
        "padding": "30px 0px",
      }
    }
  >
    <div
      className="group-name col-sm-8"
    >
      <div
        className="row"
      >
        <div
          className="col-sm-2"
        >
          <Avatar
            size="lg"
            url="/api/v4/users/123/image"
            username="test"
          />
        </div>
        <div
          className="col-sm-10"
        >
          <div
            className="row"
          >
            <b>
              @test
               
            </b>
            -
             
            Test display name
          </div>
          <div
            className="row email-group-row"
          >
            test@test.com
          </div>
        </div>
      </div>
    </div>
    <span
      className="col-sm-2 group-user-removal-column group-description"
    >
      system_user
    </span>
    <span
      className="col-sm-2 group-user-removal-column group-description group-description-link"
    >
      test group
    </span>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/group/GroupUsersRow should match snapshot with two groups 1`] = `
<div
  className="group "
>
  <div
    className="group-row roc"
    style={
      Object {
        "padding": "30px 0px",
      }
    }
  >
    <div
      className="group-name col-sm-8"
    >
      <div
        className="row"
      >
        <div
          className="col-sm-2"
        >
          <Avatar
            size="lg"
            url="/api/v4/users/123/image"
            username="test"
          />
        </div>
        <div
          className="col-sm-10"
        >
          <div
            className="row"
          >
            <b>
              @test
               
            </b>
            -
             
            Test display name
          </div>
          <div
            className="row email-group-row"
          >
            test@test.com
          </div>
        </div>
      </div>
    </div>
    <span
      className="col-sm-2 group-user-removal-column group-description"
    >
      system_user
    </span>
    <span
      className="col-sm-2 group-user-removal-column group-description group-description-link"
    >
      <OverlayTrigger
        defaultOverlayShown={false}
        overlay={
          <Tooltip
            bsClass="tooltip"
            id="groupsTooltip"
            placement="right"
          >
            test group, test group
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <a
          href="#"
        >
          <FormattedMessage
            defaultMessage="{amount, number} {amount, plural, one {Group} other {Groups}}"
            id="team_channel_settings.group.group_user_row.numberOfGroups"
            values={
              Object {
                "amount": 2,
              }
            }
          />
        </a>
      </OverlayTrigger>
    </span>
  </div>
</div>
`;
